--- a/app/views/layout/formErrors.scala.html
+++ b/app/views/layout/formErrors.scala.html
@@ -5,6 +5,6 @@
 @errors.map{ error =>
     <div class="alert alert-dismissable alert-danger">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <b>@attributeLabel(domainName, error.key)</b> : @Messages(error.message, error.args:_*)
+        @if(error.key.nonEmpty) { <b>@attributeLabel(domainName, error.key)</b> : } @Messages(error.message, error.args:_*)
     </div>
 }
