ActionSecurity added with a restriction for a custom user function (or admin). Runnables can be accessed by non-admin with a special permission RN. Closes #20. Closes #5.

--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -85,7 +85,7 @@
                             </li>
 
                             <li role="separator" class="divider"></li>
-                            @listItem(routes.AdminController.selectRunnable(), "Runnables")
+                            @listItem(routes.RunnableController.selectRunnable(), "Runnables")
                         </ul>
                     </li>
                 }
