--- a/app/views/datasettrans/editMeta.scala.html
+++ b/app/views/datasettrans/editMeta.scala.html
@@ -2,10 +2,10 @@
 @import views.html.datasettrans.{resultDataSetInfoPanel, streamSpecPanel, topInfoPanel}
 @import views.html.elements._
 @import play.api.i18n.Messages
-@import org.ada.server.models.datatrans.DataSetTransformation
+@import org.ada.server.models.datatrans.DataSetMetaTransformation
 
 @(
-    form: Form[_ <: DataSetTransformation],
+    form: Form[_ <: DataSetMetaTransformation],
     className: String)(
     typeSpecificElements: Html)(
     implicit msg: Messages
@@ -17,8 +17,6 @@
 
 <hr/>
 
-@resultDataSetInfoPanel(form)
-
 <div class="panel panel-default">
     <div class="panel-heading">Transformation Specifics</div>
     <div class="panel-body">
@@ -28,6 +26,5 @@
 </div>
 
 <div id="advancedSetting" class="collapse">
-    @streamSpecPanel(form)
     @schedulePanel(form)
 </div>
