Data set transformations - automatically generating result data set id and name. Elastic selected as a default storage option.

--- a/app/views/datasettrans/changeFieldEnumsElements.scala.html
+++ b/app/views/datasettrans/changeFieldEnumsElements.scala.html
@@ -9,7 +9,11 @@
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
 
-@(form: Form[ChangeFieldEnumsTransformation])(implicit webContext: WebContext)
+@(
+    form: Form[ChangeFieldEnumsTransformation]
+)(
+    implicit webContext: WebContext
+)
 
 @sourceDataSetTypeahead("changeFieldEnumsTransformation", form)
 
