--- a/app/views/datasettrans/copyDataSetElements.scala.html
+++ b/app/views/datasettrans/copyDataSetElements.scala.html
@@ -4,7 +4,14 @@
 @import play.api.i18n.Messages
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
+@import reactivemongo.bson.BSONObjectID
+@import org.ada.web.controllers.dataset.datatrans.OptionalIdForm
 
-@(form: Form[CopyDataSetTransformation])(implicit webContext: WebContext)
+@(
+    id: Option[BSONObjectID],
+    form: Form[CopyDataSetTransformation]
+)(
+    implicit webContext: WebContext
+)
 
-@sourceDataSetTypeahead("copyDataSetTransformation", form)
+@sourceDataSetTypeahead("copyDataSetTransformation", form, id, Some("Copy"))
