--- a/app/views/datasettrans/dropFieldsElements.scala.html
+++ b/app/views/datasettrans/dropFieldsElements.scala.html
@@ -5,9 +5,16 @@
 @import play.api.i18n.Messages
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
+@import reactivemongo.bson.BSONObjectID
+@import org.ada.web.controllers.dataset.datatrans.OptionalIdForm
 
-@(form: Form[DropFieldsTransformation])(implicit webContext: WebContext)
+@(
+    id: Option[BSONObjectID],
+    form: Form[DropFieldsTransformation]
+)(
+    implicit webContext: WebContext
+)
 
-@sourceDataSetTypeahead("dropFieldsTransformation", form)
+@sourceDataSetTypeahead("dropFieldsTransformation", form, id, Some("Dropped Fields"))
 @inputText("dropFieldsTransformation", "fieldNamesToKeep", form)
 @inputText("dropFieldsTransformation", "fieldNamesToDrop", form)
