--- a/app/views/datasettrans/list.scala.html
+++ b/app/views/datasettrans/list.scala.html
@@ -3,7 +3,7 @@
 @import views.html.dataset.{datasetMenu}
 @import views.html.filter.filterWithJs
 @import org.ada.web.controllers.dataset.datatrans.routes.{DataSetTransformationController => dataSetTransformationRoutes}
-@import org.ada.web.util.{formatTimeElement, toHumanReadableCamel, typeColumns}
+@import org.ada.web.util.{formatTimeElement, toHumanReadableCamel, typeColumns, shorten}
 @import org.ada.server.models.{DataSpaceMetaInfo, Field, Filter, FilterShowFieldStyle}
 @import org.ada.server.models.datatrans._
 @import org.ada.server.models.ScheduledTime
@@ -95,7 +95,10 @@
         dataSetTransformationRoutes.find(_, _, conditions),
         typeColumns[DataSetMetaTransformation](
             (Some("sourceDataSetIds"), "Source Data Set(s)", _.sourceDataSetIds.mkString(", ")),
-            // (Some("dataSetName"), "Data Set Name", _.resultDataSetName),
+            (Some("resultDataSetSpec.id"), "Result Data Set", _ match {
+                case x: DataSetTransformation => shorten(x.resultDataSetId)
+                case _ => ""
+            }),
             (Some("concreteClass"), "Type", {info =>  classDisplayNameMap.get(info.getClass).getOrElse(toHumanReadableCamel(info.getClass.getSimpleName)) }),
             (Some("timeCreated"), "Time Created", _.timeCreated.format("yyyy-MM-dd HH:mm:ss")),
             (Some("timeLastExecuted"), "Time Last Executed", _.timeLastExecuted.map(_.format("yyyy-MM-dd HH:mm:ss")).getOrElse("")),
