--- a/app/views/datasettrans/sourceDataSetTypeahead.scala.html
+++ b/app/views/datasettrans/sourceDataSetTypeahead.scala.html
@@ -3,11 +3,20 @@
 @import play.api.i18n.Messages
 @import org.incal.play.controllers.WebContext
 @import org.incal.play.controllers.WebContext._
+@import org.incal.core.util.nonAlphanumericToUnderscore
 @import views.html.elements.inputTypeahead
 @import org.ada.web.controllers.dataset.datatrans.routes
 @import org.ada.server.models.FilterShowFieldStyle
+@import reactivemongo.bson.BSONObjectID
 
-@(domainName: String, form: Form[_])(implicit context: WebContext)
+@(
+    domainName: String,
+    form: Form[_],
+    transformationId: Option[BSONObjectID] = None,
+    dataSetNameSuffix: Option[String] = None
+)(
+    implicit context: WebContext
+)
 
 @typeaheadJsImport()
 
@@ -19,14 +28,45 @@
     "Data Set"
 )
 
+@helper.javascriptRouter("dataSetTransformationJsRoutes")(
+    org.ada.web.controllers.dataset.datatrans.routes.javascript.DataSetTransformationController.resultDataSetIdAndName
+)
+
 <script type="text/javascript">
     $(function () {
+        var addSelectedListener = function() {
+            setTimeout(function(){
+                @dataSetNameSuffix.map { suffix =>
+                    $('#sourceDataSetTypeahead').on('typeahead:selected', function (evt, item) {   // typeahead:select
+                        var sourceDataSetId = item.key
+                        var dataSetId = item.key + "_" + '@{nonAlphanumericToUnderscore(suffix.trim()).toLowerCase()}'
+                        var dataSetName = item.key + ' @suffix'
+                        var transformationId = @if(transformationId.isDefined) { '@transformationId.get.stringify' } else { null }
+
+                        console.log(transformationId)
+
+                        dataSetTransformationJsRoutes.org.ada.web.controllers.dataset.datatrans.DataSetTransformationController.resultDataSetIdAndName(sourceDataSetId, '@suffix', transformationId).ajax({
+                            success: function (data) {
+                                console.log("called")
+                                $('#resultDataSetSpec_id').val(data.id)
+                                $('#resultDataSetSpec_name').val(data.name)
+                            },
+                            error: showErrorResponse
+                        })
+
+
+
+                    })
+                }
+            }, 250)
+        }
+
         populateFieldTypeahedFromUrl(
             $('#sourceDataSetTypeahead'),
             $('#sourceDataSetId'),
             '@Html(routes.DataSetTransformationController.dataSetIds().url)',
             @FilterShowFieldStyle.LabelsOnly.id,
-            null,
+            addSelectedListener,
             true
         )
     })
